<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:id="@+id/contentArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/arrowImg"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_credit" />


                <LinearLayout
                    android:id="@+id/transactionDetailArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.view.MTextView
                        android:id="@+id/transactionDesVTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="top|start|center"
                        android:minLines="1"
                        android:text="Debited for trip"
                        android:textAlignment="viewStart"
                        android:textColor="#141414"
                        android:textSize="@dimen/txt_size_14"

                        app:customTypeFace="@string/systemMediumFont" />

                    <com.view.MTextView
                        android:id="@+id/transactiondateTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center"
                        android:maxLines="1"
                        android:text="12 july.2019"
                        android:textAlignment="viewStart"
                        android:textColor="#343434"
                        android:textSize="@dimen/_11ssp"

                        app:customTypeFace="@string/systemRegular" />


                </LinearLayout>

                <com.view.MTextView
                    android:id="@+id/tranasctionBalVTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:maxLines="1"
                    android:text="sss"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:customTypeFace="@string/systemSemiBold" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_4sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="-15dp"
                android:layout_marginBottom="-15dp"
                android:background="@color/red" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>